# MyTorch

./: CMakeLists.txt  main.cpp  tensor.cpp  tensor.h  tensorshape.cpp  tensorshape.h
headers/: dense.h  module.h  relu.h  tensor.h  tensorshape.h  utils.h
scripts/: run_main.bat
src/: dense.cpp  main.cpp  relu.cpp  tensor.cpp  tensorshape.cpp  utils.cpp
tests/: test_shape.cpp  test_tensor.cpp  test_utils.cpp
